--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://circhetta.com/'
+baseURL = 'https://circhetta.com/'
 languageCode = 'en-us'
 title = 'Francesco Circhetta'
 theme = 'PaperMod'
